[package]
name = "history-fuzzy-search"
version = "0.2.0"
authors = ["Jay LU <jayjjlu@gmail.com>"]
edition = "2018"
description = "A tool for fuzzy searching through command history"
license = "MIT"
repository = "https://github.com/jaylu/history-fuzzy-search"
homepage = "https://github.com/jaylu/history-fuzzy-search"
documentation = "https://github.com/jaylu/history-fuzzy-search"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
fuzzy_match = "0.2.1"
clipboard = "0.5.0"
regex = "1.5.4"
termion = "4.0.3"

[[bin]]
name = "hfs"
path = "src/main.rs"